# practice-injector

./: .flake8  Makefile  README.md  pyproject.toml
src/: db.py  di.py  main.py  preprocess.py  usecase.py  usecase_test.py
src/data/: origin.json  save.json
